[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helloworld"
version = "0.1.0"
authors = [{ name = "Viet Dinh", email = "dinhquocvietpro@gmail.com" }]
description = "A simple Hello World package"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.urls]
Homepage = "https://github.com/viet-dinh/py-helloworld"